@@ -2,7 +2,7 @@
 #
 # mailman    This shell script starts and stops GNU Mailman.
 #
-# Copyright (C) 2001-2003 by the Free Software Foundation, Inc.
+# Copyright (C) 2001-2013 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -16,7 +16,8 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301,
+# USA.
 #
 # Copy this file to /etc/init.d/ (or /etc/rc.d/init.d/ depending on
 # your system) and activate it as such:
@@ -48,6 +49,10 @@ case "$1" in
 
 'restart')
     $PYTHON $MAILMANCTL -q restart
+    ;;
+
+'reopen')
+    $PYTHON $MAILMANCTL -q reopen
     ;;
 
 esac
