@@ -24,6 +24,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Added a reopen command to the sample init.d script in misc/mailman.in.
+      (LP: #1251917)
+
     - Fixed a misspelling in Tagger.py causing an "unexpected keyword argument
       'Delete'" exception.  (LP: #1251495)
 
